feat:   新增了家人报告查看功能 fix:   修复了sse不流畅问题
